[project]
name = "fetch-pubmed-papers"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
     "requests >=2.32.3,<3.0.0"
]

[tool.poetry.scripts]
get-papers-list = "fetch_pubmed_papers.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
